[package]
name = "pump-forking-meteora-sc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_forking_meteora_sc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.28.0", features = ["event-cpi", "init-if-needed"] }
anchor-spl = "0.28.0"
uint = "0.8.5"
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
mpl-token-metadata = "3.0.1"
solana-program = "1.16.0"
num_enum = "0.7.1"
ahash = "=0.8.6"

[dev-dependencies]
proptest = "1.2.0"
rand = "0.7.3"
solana-sdk = "1.16.0"
async-trait = "0.1.52"
assert_matches = "1.5.0"
